Log version distribution